--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.1.RELEASE</version>
+		<version>2.3.2.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.github.bruce95a</groupId>
@@ -16,6 +16,8 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<sqlite-jdbc.version>3.32.3.2</sqlite-jdbc.version>
+		<zxing.version>3.4.0</zxing.version>
 	</properties>
 
 	<dependencies>
@@ -43,13 +45,13 @@
 		<dependency>
 			<groupId>org.xerial</groupId>
 			<artifactId>sqlite-jdbc</artifactId>
-			<version>3.31.1</version>
+			<version>${sqlite-jdbc.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.google.zxing</groupId>
 			<artifactId>javase</artifactId>
-			<version>3.4.0</version>
+			<version>${zxing.version}</version>
 		</dependency>
 	</dependencies>
 
