--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.thymeleaf.cache=false
 
-spring.datasource.driver-class-name=org.sqlite.JDBC
-spring.datasource.url=jdbc:sqlite:data.db
-spring.datasource.username=
-spring.datasource.password=
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:file:./data
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=root123admin
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
